# mafutils

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
benchmarks/: README.md  Snakefile  baseline-manual-timings.txt  config.yaml  history.csv  notebook.ipynb  parse_benchmarks.py
benchmarks/profiles/slurm/: config.yaml
mafutils/: __init__.py  cli.py  fetch.py  gc.py  index.py  stats.py  validate.py
mafutils/lib/: bgzf.py  common.py
tests/: crossblocks-missing-species.bed  crossblocks.bed  example-tabs.maf  example-tabs.maf.block.idx  example-tabs.maf.scaffold.idx  example.bed  example.maf  example.maf.bgz  example.maf.bgz.block.idx  example.maf.bgz.scaffold.idx  example.maf.block.idx  example.maf.gz.block.idx  example.maf.gz.scaffold.idx  example.maf.scaffold.idx  example.maf.scaffold.regenerated.idx  real-excerpt.maf  real-excerpt.maf.block.idx  real-excerpt.maf.scaffold.idx  test_compression.py  test_fetch.py  test_gc.py  test_real_data.py  test_stats.py  test_validate.py
tests/expected-fasta/: 01-singleblock-gap.fa  02-truncatedblock.fa  03-crossblocks-missing.fa  04-singleblock.fa  05-crossblocks.fa  07-negstrand.fa  08-span-multiple-gaps.fa  10-crossblocks-missing-species.fa
tests/expected-maf/: 01-singleblock-gap.maf  02-truncatedblock.maf  03-crossblocks-missing.maf  04-singleblock.maf  05-crossblocks.maf  07-negstrand.maf  08-span-multiple-gaps.maf  10-crossblocks-missing-species.maf
