[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mafutils"
version = "0.1.0"
description = "Reusable MAF toolkit for indexing, fetching, and summarizing MAFs."
requires-python = ">=3.9"
dependencies = [
  "typer",
]

[project.scripts]
mafutils = "mafutils.cli:main"

[tool.setuptools]
packages = ["mafutils", "mafutils.lib"]
